<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mycinema.fragments.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_home_to_moviesList"
            app:destination="@id/moviesListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_favorites"
            app:destination="@id/favoritesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_searchOnline"
            app:destination="@id/searchOnlineFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_statistics"
            app:destination="@id/statisticsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_addEditMovie"
            app:destination="@id/addEditMovieFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_home_to_cinemaLocations"
            app:destination="@id/cinemaLocationsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/moviesListFragment"
        android:name="com.example.mycinema.fragments.MoviesListFragment"
        android:label="@string/my_collection">
        <action
            android:id="@+id/action_moviesListToMovieDetails"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">

            <argument
                android:name="movieId"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_moviesList_to_addEditMovie"
            app:destination="@id/addEditMovieFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.mycinema.fragments.FavoritesFragment"
        android:label="@string/favorites">
        <action
            android:id="@+id/action_favoritesToMovieDetails"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            >
            <argument
                android:name="movieId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/searchOnlineFragment"
        android:name="com.example.mycinema.fragments.SearchOnlineFragment"
        android:label="@string/search_online_title">
        <action
            android:id="@+id/action_searchOnline_to_addEditMovie"
            app:destination="@id/addEditMovieFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mycinema.fragments.SettingsFragment"
        android:label="@string/settings_title">
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.mycinema.fragments.StatisticsFragment"
        android:label="@string/statistics_title">
    </fragment>

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.mycinema.fragments.MovieDetailsFragment"
        android:label="@string/movie_details">
        <argument
            android:name="movieId"
            app:argType="integer" />
        <action
            android:id="@+id/action_movieDetails_to_addEditMovie"
            app:destination="@id/addEditMovieFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/addEditMovieFragment"
        android:name="com.example.mycinema.fragments.AddEditMovieFragment"
        android:label="@string/add_edit_movie">
        <argument
            android:name="movieId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/cinemaLocationsFragment"
        android:name="com.example.mycinema.fragments.CinemaLocationsFragment"
        android:label="@string/cinema_locations">
        <action
            android:id="@+id/action_cinemaLocations_to_list"
            app:destination="@id/cinemaListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/action_cinemaLocations_to_details"
            app:destination="@id/cinemaDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/cinemaListFragment"
        android:name="com.example.mycinema.fragments.CinemaListFragment"
        android:label="@string/nearby_cinemas">
        <action
            android:id="@+id/action_cinemaList_to_details"
            app:destination="@id/cinemaDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/cinemaDetailsFragment"
        android:name="com.example.mycinema.fragments.CinemaDetailsFragment"
        android:label="@string/cinema_details">
        <argument
            android:name="cinemaId"
            app:argType="integer" />
    </fragment>

    <!-- ACTION גלובלי לפתרון בעיות ניווט -->
    <action
        android:id="@+id/action_global_movieDetails"
        app:destination="@id/movieDetailsFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"
        >
        <argument
            android:name="movieId"
            app:argType="integer" />
    </action>

</navigation>